# nginx-hibernator

./: .gitignore  Cargo.toml  README.md  install.sh
backend/: Cargo.toml
backend/dev/: config.toml  run.sh  setup.sh
backend/flycheck0/: stderr  stdout
backend/src/: api.rs  bincoded.rs  config.rs  controller.rs  cooldown.rs  database.rs  landing.rs  main.rs  server.rs  util.rs
dev/: config.toml  durations.txt  run.sh  setup.sh
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AppLayout.vue  Dashboard.vue  Login.vue  Logs.vue  LogsTable.vue  Network.vue  PageHeader.vue  RequestsTable.vue  ServiceDashboard.vue  ServiceDetail.vue  ServiceMetrics.vue  ServiceStates.vue  ServicesOverview.vue  StateHistoryTable.vue
frontend/src/lib/: api.ts  time.ts  utils.ts
frontend/src/types/: api.ts
landing/: README.md  index.html
src/: api.rs  config.rs  controller.rs  cooldown.rs  database.rs  main.rs  pending_check.rs  server.rs  util.rs
static/: index.html
