[package]
name = "nginx-hibernator"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# rev_lines = "0.3"
anyhow = "1.0"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
globset = "0.4"
tokio = { version="1.41", default-features=false, features = ["macros", "rt", "time", "sync", "fs", "io-util", "process", "net"] }
tokio-stream ={ version="0.1", default-features=false, features = ["io-util"] }
libc = "0.2.171"
